Closed
Bug 694503
Opened 14 years ago
Closed 14 years ago
image map doesn't get updated when map element is removed as part of container subtree
Categories
(Core :: Layout: Images, Video, and HTML Frames, defect)
Core
Layout: Images, Video, and HTML Frames
Tracking
()
RESOLVED
FIXED
mozilla10
People
(Reporter: surkov, Assigned: smaug)
References
Details
Attachments
(2 files, 1 obsolete file)
|
621 bytes,
text/html
|
Details | |
|
9.61 KB,
patch
|
bzbarsky
:
review+
|
Details | Diff | Splinter Review |
nsImageMap register mutation observer on map element, mutation observer doesn't get notified when root is removed as part of containing subtree.
Steps to reproduce:
1) hover of imagemap, hand cursor appears on imagemap mouseover
2) remove area element, no hand cursor on corresponding imagemap area
3) remove the container of map element from DOM, hand cursor appears on imagemap
| Assignee | ||
Comment 1•14 years ago
|
||
T
Component: DOM → Layout: Images
QA Contact: general → layout.images
| Assignee | ||
Comment 2•14 years ago
|
||
Seems like imagemap handling is pretty much static. It is all set when nsImageFrame first time
uses imagemap for something, and after that the image frame points to the same map element, even if
the id of it changes etc.
nsImageMap should probably use ReferencedElement to track the changes.
| Assignee | ||
Comment 4•14 years ago
|
||
But we really need to fix image map handling.
http://mxr.mozilla.org/mozilla-central/source/accessible/src/html/nsHTMLImageMapAccessible.cpp#181 should be fixed to not use
primaryframe of area elements (since we need to get rid of primary frames in that case)
After that fixing focus handling, also remove support for <a> elements as synonyms to
area etc.
| Assignee | ||
Comment 5•14 years ago
|
||
Handle also name/id changes.
Uploaded to try
Attachment #570119 -
Attachment is obsolete: true
Attachment #570297 -
Flags: review?(bzbarsky)
Comment 6•14 years ago
|
||
Comment on attachment 570297 [details] [diff] [review]
patch
Why do we need to null-check mImageFrame in ParentChainChanged but not AttributeChanged?
r=me with those made consistent.
Attachment #570297 -
Flags: review?(bzbarsky) → review+
| Assignee | ||
Comment 7•14 years ago
|
||
mImageFrame is null checked in both places.
| Assignee | ||
Comment 8•14 years ago
|
||
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Updated•14 years ago
|
Target Milestone: --- → mozilla10
Updated•8 years ago
|
Product: Core → Core Graveyard
Updated•8 years ago
|
Product: Core Graveyard → Core
You need to log in
before you can comment on or make changes to this bug.
Description
•