Bug 694503 - image map doesn't get updated when map element is removed as part of container subtree, r=bz